# keyboardcontrol

./: README.md  a.py  b.py  design.md  devenv.nix  devenv1.yaml  integrations  main3.py  pyproject.toml  qttest.py  shell.nix  x.py
config/: default.yaml
config/applications/: Edge.yml  Notepad.yml  Teams.yml
config/general/: screen record.yml  screen recording.yml  screenshot.yml  screenshots.yml
src/: AppMainUi.py  AppMainUi.ui  AppMainWindow.py  AppMainWindow.ui  AppMainWindow1.py  EditProperties.py  EditProperties.ui  EditWindow.py  keyboardCapture.py  keyboardCapture1.py  main.py  qtreewidget.py  readconfig.py  resources.qrc  sidebar.py  sidebar2.py  sidebar3.py  systray.py  ui.py  x.py  y.py  z.py  z1.py  z2.py  z3.py  z4.py  z5.py
src/Recording/: RecordingUi.py  RecordingUi.ui  recording.py  recordingBackend.py
src/Sidebar/: __init__.py  sidebar3.py
tmp/: apis.md  config.yml  config1.yml  design.md  integrations  key  keys  text.excalidraw
try/: designerwindow1.py  keyboardClass.py  keyboardtest.py  login.py  login_form.py  scrollbar.py  untitled.ui
